classDiagram

    direction LR

    class Volume {
        <<Abstract>>
    }

    class Cube {
        +Size : Vector
        #DrawLocal(gl : OpenGL) void
    }

    class Sphere {
        +Radius : float
        +Slices : int
        +Stacks : int
        #DrawLocal(gl : OpenGL) void
    }

    class Cone {
        +Radius1 : float
        +Radius2 : float
        +Height : float
        +Slices : int
        #DrawLocal(gl : OpenGL) void
    }

    Volume <|-- Cube
    Volume <|-- Sphere
    Volume <|-- Cone

    Cube *-- Vector : +Size

    style Volume fill:white
    style Vector fill:white